fix test for icon display on mobile

--- a/src/components/work/overview/covercarousel/arrow/Arrow.module.css
+++ b/src/components/work/overview/covercarousel/arrow/Arrow.module.css
@@ -18,13 +18,6 @@
   border-radius: 50%;
 }
 
-/* button explicity to override display css hierarchy */
-button.arrow_functionality {
-  display: flex;
-  align-items: center;
-  justify-content: center;
-}
-
 .arrow_functionality:is(:hover, :focus-visible) {
   background-color: var(--arrow__background_color_hover);
   fill: var(--arrow__fill_color_hover);
